[gd_scene load_steps=28 format=3 uid="uid://bxp447h1pl74q"]

[ext_resource type="Texture2D" uid="uid://2ovo0ug2uav7" path="res://assets/White-Light-Transparent.png" id="1_khbcb"]
[ext_resource type="Texture2D" uid="uid://b7mcxinvbayhw" path="res://assets/objects/Tilemap_Elevation.png" id="1_nndmh"]
[ext_resource type="Texture2D" uid="uid://ixsqxd2vamno" path="res://assets/objects/Tilemap_Flat.png" id="2_rotw3"]
[ext_resource type="PackedScene" uid="uid://bx4hos4v32f4h" path="res://scenes/tree_1.tscn" id="3_uw7uo"]
[ext_resource type="PackedScene" uid="uid://djmtlw02g80nk" path="res://scenes/tree_3.tscn" id="4_djxj5"]
[ext_resource type="PackedScene" uid="uid://cgvgjj11erxsh" path="res://scenes/tree_2.tscn" id="5_ib3p7"]
[ext_resource type="Texture2D" uid="uid://da6mk18n0r5id" path="res://assets/deco/01.png" id="7_ldnkh"]
[ext_resource type="Texture2D" uid="uid://iwajuaqpvrg0" path="res://assets/deco/03.png" id="8_tv32f"]
[ext_resource type="Texture2D" uid="uid://dcstwrkgiehbn" path="res://assets/deco/02.png" id="9_qo61f"]
[ext_resource type="Texture2D" uid="uid://cu2vxbi5wi1gh" path="res://assets/deco/06.png" id="10_a5gvk"]
[ext_resource type="Texture2D" uid="uid://dxqiaim0ouh8a" path="res://assets/deco/15.png" id="11_l0nbg"]
[ext_resource type="Texture2D" uid="uid://ppuu6pveq7ex" path="res://assets/deco/12.png" id="12_uuah0"]
[ext_resource type="Texture2D" uid="uid://dadysqxcw6kej" path="res://assets/deco/05.png" id="13_tlm7u"]
[ext_resource type="Texture2D" uid="uid://c10iv1rnfy7rx" path="res://assets/deco/04.png" id="14_hd2o2"]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id="17_ys281"]
[ext_resource type="Texture2D" uid="uid://bpldvd3rmbgve" path="res://assets/ui/healthbar/healthbarUnder.png" id="18_x1usu"]
[ext_resource type="FontFile" uid="uid://c5451snbtcult" path="res://assets/fonts/NESCyrillic.ttf" id="19_26lr3"]
[ext_resource type="Texture2D" uid="uid://h4x870vd0fs3" path="res://assets/ui/healthbar/healthbarProgress.png" id="19_m4jxn"]
[ext_resource type="PackedScene" uid="uid://bjhaedklfnskv" path="res://scenes/tower.tscn" id="20_7ojhf"]
[ext_resource type="Script" path="res://scripts/TowerHealthBar.gd" id="20_qsfc1"]
[ext_resource type="Script" path="res://GoldLabel.gd" id="20_t47ew"]
[ext_resource type="Script" path="res://scripts/Upgrades.gd" id="21_3pp3v"]
[ext_resource type="Texture2D" uid="uid://bgtv3n6k8ogth" path="res://assets/ui/9-slice01.png" id="21_6orfn"]
[ext_resource type="Theme" uid="uid://cm14jfl6doc0" path="res://assets/ui/button.tres" id="22_4x3y6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_owm0f"]
texture = ExtResource("1_nndmh")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wfn22"]
texture = ExtResource("2_rotw3")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0

[sub_resource type="TileSet" id="TileSet_v6a3j"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_owm0f")
sources/1 = SubResource("TileSetAtlasSource_wfn22")

[node name="Main" type="Node2D"]
y_sort_enabled = true

[node name="Ground" type="TileMap" parent="."]
tile_set = SubResource("TileSet_v6a3j")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(0, 65537, 1, 65536, 65537, 1, 131072, 65537, 1, 196608, 65537, 1, 262144, 65537, 1, 327680, 65537, 1, 393216, 65537, 1, 458752, 65537, 1, 524288, 65537, 1, 589824, 65537, 1, 655360, 65537, 1, 720896, 65537, 1, 1, 65537, 1, 65537, 65537, 1, 131073, 65537, 1, 196609, 65537, 1, 262145, 65537, 1, 327681, 65537, 1, 393217, 65537, 1, 458753, 65537, 1, 524289, 65537, 1, 589825, 65537, 1, 655361, 65537, 1, 720897, 65537, 1, 2, 65537, 1, 65538, 65537, 1, 131074, 65537, 1, 196610, 65537, 1, 262146, 65537, 1, 327682, 65537, 1, 393218, 65537, 1, 458754, 65537, 1, 524290, 65537, 1, 589826, 65537, 1, 655362, 65537, 1, 720898, 65537, 1, 3, 65537, 1, 65539, 65537, 1, 131075, 65537, 1, 196611, 65537, 1, 262147, 65537, 1, 327683, 65537, 1, 393219, 65537, 1, 458755, 65537, 1, 524291, 65537, 1, 589827, 65537, 1, 655363, 65537, 1, 720899, 65537, 1, 4, 65537, 1, 65540, 65537, 1, 131076, 65537, 1, 196612, 65537, 1, 262148, 65537, 1, 327684, 65537, 1, 393220, 65537, 1, 458756, 65537, 1, 524292, 65537, 1, 589828, 65537, 1, 655364, 65537, 1, 720900, 65537, 1, 5, 65537, 1, 65541, 65537, 1, 131077, 65537, 1, 196613, 65537, 1, 262149, 65537, 1, 327685, 65537, 1, 393221, 65537, 1, 458757, 65537, 1, 524293, 65537, 1, 589829, 65537, 1, 655365, 65537, 1, 720901, 65537, 1, 6, 65537, 1, 65542, 65537, 1, 131078, 65537, 1, 196614, 65537, 1, 262150, 65537, 1, 327686, 65537, 1, 393222, 65537, 1, 458758, 65537, 1, 524294, 65537, 1, 589830, 65537, 1, 655366, 65537, 1, 720902, 65537, 1, 7, 65537, 1, 65543, 65537, 1, 131079, 65537, 1, 196615, 65537, 1, 262151, 65537, 1, 327687, 65537, 1, 393223, 65537, 1, 458759, 65537, 1, 524295, 65537, 1, 589831, 65537, 1, 655367, 65537, 1, 720903, 65537, 1, 8, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, 196616, 65537, 1, 262152, 65537, 1, 327688, 65537, 1, 393224, 65537, 1, 458760, 65537, 1, 524296, 65537, 1, 589832, 65537, 1, 655368, 65537, 1, 720904, 65537, 1, 9, 65537, 1, 65545, 65537, 1, 131081, 65537, 1, 196617, 65537, 1, 262153, 65537, 1, 327689, 65537, 1, 393225, 65537, 1, 458761, 65537, 1, 524297, 65537, 1, 589833, 65537, 1, 655369, 65537, 1, 720905, 65537, 1, 10, 65537, 1, 65546, 65537, 1, 131082, 65537, 1, 196618, 65537, 1, 262154, 65537, 1, 327690, 65537, 1, 393226, 65537, 1, 458762, 65537, 1, 524298, 65537, 1, 589834, 65537, 1, 655370, 65537, 1, 720906, 65537, 1, 11, 65537, 1, 65547, 65537, 1, 131083, 65537, 1, 196619, 65537, 1, 262155, 65537, 1, 327691, 65537, 1, 393227, 65537, 1, 458763, 65537, 1, 524299, 65537, 1, 589835, 65537, 1, 655371, 65537, 1, 720907, 65537, 1, 12, 65537, 1, 65548, 65537, 1, 131084, 65537, 1, 196620, 65537, 1, 262156, 65537, 1, 327692, 65537, 1, 393228, 65537, 1, 458764, 65537, 1, 524300, 65537, 1, 589836, 65537, 1, 655372, 65537, 1, 720908, 65537, 1, 13, 65537, 1, 65549, 65537, 1, 131085, 65537, 1, 196621, 65537, 1, 262157, 65537, 1, 327693, 65537, 1, 393229, 65537, 1, 458765, 65537, 1, 524301, 65537, 1, 589837, 65537, 1, 655373, 65537, 1, 720909, 65537, 1, 14, 65537, 1, 65550, 65537, 1, 131086, 65537, 1, 196622, 65537, 1, 262158, 65537, 1, 327694, 65537, 1, 393230, 65537, 1, 458766, 65537, 1, 524302, 65537, 1, 589838, 65537, 1, 655374, 65537, 1, 720910, 65537, 1, 15, 65537, 1, 65551, 65537, 1, 131087, 65537, 1, 196623, 65537, 1, 262159, 65537, 1, 327695, 65537, 1, 393231, 65537, 1, 458767, 65537, 1, 524303, 65537, 1, 589839, 65537, 1, 655375, 65537, 1, 720911, 65537, 1, 16, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, 196624, 65537, 1, 262160, 65537, 1, 327696, 65537, 1, 393232, 65537, 1, 458768, 65537, 1, 524304, 65537, 1, 589840, 65537, 1, 655376, 65537, 1, 720912, 65537, 1, 17, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, 196625, 65537, 1, 262161, 65537, 1, 327697, 65537, 1, 393233, 65537, 1, 458769, 65537, 1, 524305, 65537, 1, 589841, 65537, 1, 655377, 65537, 1, 720913, 65537, 1, 18, 65537, 1, 65554, 65537, 1, 131090, 65537, 1, 196626, 65537, 1, 262162, 65537, 1, 327698, 65537, 1, 393234, 65537, 1, 458770, 65537, 1, 524306, 65537, 1, 589842, 65537, 1, 655378, 65537, 1, 720914, 65537, 1, 19, 65537, 1, 65555, 65537, 1, 131091, 65537, 1, 196627, 65537, 1, 262163, 65537, 1, 327699, 65537, 1, 393235, 65537, 1, 458771, 65537, 1, 524307, 65537, 1, 589843, 65537, 1, 655379, 65537, 1, 720915, 65537, 1, 20, 65537, 1, 65556, 65537, 1, 131092, 65537, 1, 196628, 65537, 1, 262164, 65537, 1, 327700, 65537, 1, 393236, 65537, 1, 458772, 65537, 1, 524308, 65537, 1, 589844, 65537, 1, 655380, 65537, 1, 720916, 65537, 1, 786452, 65537, 1, 786451, 65537, 1, 786450, 65537, 1, 786449, 65537, 1, 786448, 65537, 1, 786447, 65537, 1, 786446, 65537, 1, 786445, 65537, 1, 786444, 65537, 1, 786443, 65537, 1, 786442, 65537, 1, 786441, 65537, 1, 786440, 65537, 1, 786439, 65537, 1, 786438, 65537, 1, 786437, 65537, 1, 786436, 65537, 1, 786435, 65537, 1, 786434, 65537, 1, 786433, 65537, 1, 786432, 65537, 1, -131075, 65537, 1, -65539, 65537, 1, -3, 65537, 1, 65533, 65537, 1, 131069, 65537, 1, 196605, 65537, 1, 262141, 65537, 1, 327677, 65537, 1, 393213, 65537, 1, 458749, 65537, 1, 524285, 65537, 1, 589821, 65537, 1, 655357, 65537, 1, 720893, 65537, 1, 786429, 65537, 1, 851965, 65537, 1, 917501, 65537, 1, 983037, 65537, 1, 1048573, 65537, 1, -131074, 65537, 1, -65538, 65537, 1, -2, 65537, 1, 65534, 65537, 1, 131070, 65537, 1, 196606, 65537, 1, 262142, 65537, 1, 327678, 65537, 1, 393214, 65537, 1, 458750, 65537, 1, 524286, 65537, 1, 589822, 65537, 1, 655358, 65537, 1, 720894, 65537, 1, 786430, 65537, 1, 851966, 65537, 1, 917502, 65537, 1, 983038, 65537, 1, 1048574, 65537, 1, -131073, 65537, 1, -65537, 65537, 1, -1, 65537, 1, 65535, 65537, 1, 131071, 65537, 1, 196607, 65537, 1, 262143, 65537, 1, 327679, 65537, 1, 393215, 65537, 1, 458751, 65537, 1, 524287, 65537, 1, 589823, 65537, 1, 655359, 65537, 1, 720895, 65537, 1, 786431, 65537, 1, 851967, 65537, 1, 917503, 65537, 1, 983039, 65537, 1, 1048575, 65537, 1, -196608, 65537, 1, -131072, 65537, 1, -65536, 65537, 1, 851968, 65537, 1, 917504, 65537, 1, 983040, 65537, 1, -196607, 65537, 1, -131071, 65537, 1, -65535, 65537, 1, 851969, 65537, 1, 917505, 65537, 1, 983041, 65537, 1, -196606, 65537, 1, -131070, 65537, 1, -65534, 65537, 1, 851970, 65537, 1, 917506, 65537, 1, 983042, 65537, 1, -196605, 65537, 1, -131069, 65537, 1, -65533, 65537, 1, 851971, 65537, 1, 917507, 65537, 1, 983043, 65537, 1, -196604, 65537, 1, -131068, 65537, 1, -65532, 65537, 1, 851972, 65537, 1, 917508, 65537, 1, 983044, 65537, 1, -196603, 65537, 1, -131067, 65537, 1, -65531, 65537, 1, 851973, 65537, 1, 917509, 65537, 1, 983045, 65537, 1, -196602, 65537, 1, -131066, 65537, 1, -65530, 65537, 1, 851974, 65537, 1, 917510, 65537, 1, 983046, 65537, 1, -196601, 65537, 1, -131065, 65537, 1, -65529, 65537, 1, 851975, 65537, 1, 917511, 65537, 1, 983047, 65537, 1, -196600, 65537, 1, -131064, 65537, 1, -65528, 65537, 1, 851976, 65537, 1, 917512, 65537, 1, 983048, 65537, 1, -196599, 65537, 1, -131063, 65537, 1, -65527, 65537, 1, 851977, 65537, 1, 917513, 65537, 1, 983049, 65537, 1, -196598, 65537, 1, -131062, 65537, 1, -65526, 65537, 1, 851978, 65537, 1, 917514, 65537, 1, 983050, 65537, 1, -196597, 65537, 1, -131061, 65537, 1, -65525, 65537, 1, 851979, 65537, 1, 917515, 65537, 1, 983051, 65537, 1, -196596, 65537, 1, -131060, 65537, 1, -65524, 65537, 1, 851980, 65537, 1, 917516, 65537, 1, 983052, 65537, 1, -196595, 65537, 1, -131059, 65537, 1, -65523, 65537, 1, 851981, 65537, 1, 917517, 65537, 1, 983053, 65537, 1, -196594, 65537, 1, -131058, 65537, 1, -65522, 65537, 1, 851982, 65537, 1, 917518, 65537, 1, 983054, 65537, 1, -196593, 65537, 1, -131057, 65537, 1, -65521, 65537, 1, 851983, 65537, 1, 917519, 65537, 1, 983055, 65537, 1, -196592, 65537, 1, -131056, 65537, 1, -65520, 65537, 1, 851984, 65537, 1, 917520, 65537, 1, 983056, 65537, 1, -196591, 65537, 1, -131055, 65537, 1, -65519, 65537, 1, 851985, 65537, 1, 917521, 65537, 1, 983057, 65537, 1, -196590, 65537, 1, -131054, 65537, 1, -65518, 65537, 1, 851986, 65537, 1, 917522, 65537, 1, 983058, 65537, 1, -196589, 65537, 1, -131053, 65537, 1, -65517, 65537, 1, 851987, 65537, 1, 917523, 65537, 1, 983059, 65537, 1, -196588, 65537, 1, -131052, 65537, 1, -65516, 65537, 1, 851988, 65537, 1, 917524, 65537, 1, 983060, 65537, 1, -196587, 65537, 1, -131051, 65537, 1, -65515, 65537, 1, 21, 65537, 1, 65557, 65537, 1, 131093, 65537, 1, 196629, 65537, 1, 262165, 65537, 1, 327701, 65537, 1, 393237, 65537, 1, 458773, 65537, 1, 524309, 65537, 1, 589845, 65537, 1, 655381, 65537, 1, 720917, 65537, 1, 786453, 65537, 1, 851989, 65537, 1, 917525, 65537, 1, 983061, 65537, 1, -196586, 65537, 1, -131050, 65537, 1, -65514, 65537, 1, 22, 65537, 1, 65558, 65537, 1, 131094, 65537, 1, 196630, 65537, 1, 262166, 65537, 1, 327702, 65537, 1, 393238, 65537, 1, 458774, 65537, 1, 524310, 65537, 1, 589846, 65537, 1, 655382, 65537, 1, 720918, 65537, 1, 786454, 65537, 1, 851990, 65537, 1, 917526, 65537, 1, 983062, 65537, 1, -196585, 65537, 1, -131049, 65537, 1, -65513, 65537, 1, 23, 65537, 1, 65559, 65537, 1, 131095, 65537, 1, 196631, 65537, 1, 262167, 65537, 1, 327703, 65537, 1, 393239, 65537, 1, 458775, 65537, 1, 524311, 65537, 1, 589847, 65537, 1, 655383, 65537, 1, 720919, 65537, 1, 786455, 65537, 1, 851991, 65537, 1, 917527, 65537, 1, 983063, 65537, 1)

[node name="Lightning" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="PointLight2D" type="PointLight2D" parent="Lightning"]
position = Vector2(644, 354)
scale = Vector2(0.99342, 0.663349)
texture = ExtResource("1_khbcb")
texture_scale = 1.15

[node name="Trees" type="Node" parent="."]

[node name="Tree1" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(199, 116)
scale = Vector2(1.41761, 1.0909)

[node name="Tree3" parent="Trees" instance=ExtResource("4_djxj5")]
position = Vector2(25, 198)
scale = Vector2(1.73117, 1.37651)

[node name="Tree8" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(1396, 683)

[node name="Tree7" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(1404, 476)

[node name="Tree11" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(1400, 253)

[node name="Tree6" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(1300, 111)

[node name="Tree4" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(487, 85)

[node name="Tree5" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(29, 424)
scale = Vector2(1.46326, 1.31493)

[node name="Tree9" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(431, 860)

[node name="Tree10" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(400, 73)

[node name="Tree31" parent="Trees" instance=ExtResource("4_djxj5")]
position = Vector2(1318, 564)

[node name="Tree13" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(9, 597)
scale = Vector2(1.44682, 1.49061)

[node name="Tree19" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(1216, 620)

[node name="Tree15" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(99, 816)
scale = Vector2(1.53541, 1.40915)

[node name="Tree15" parent="Trees/Tree15" instance=ExtResource("5_ib3p7")]
position = Vector2(-73.596, 61.0296)
scale = Vector2(1.53541, 1.40915)

[node name="Tree16" parent="Trees" instance=ExtResource("4_djxj5")]
position = Vector2(270, 824)
rotation = -3.14159
scale = Vector2(1.82318, -1.41914)

[node name="Tree20" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(559, 750)
rotation = -3.14159
scale = Vector2(1.2, -1)

[node name="Tree21" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(668, 820)

[node name="Tree21" parent="Trees/Tree21" instance=ExtResource("3_uw7uo")]
position = Vector2(-84, 111)

[node name="Tree24" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(851, 839)

[node name="Tree28" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(946, 752)

[node name="Tree28" parent="Trees/Tree28" instance=ExtResource("5_ib3p7")]
position = Vector2(4, 148)

[node name="Tree29" parent="Trees" instance=ExtResource("4_djxj5")]
position = Vector2(1131, 804)
rotation = -3.14159
scale = Vector2(1.12658, -1.22366)

[node name="Tree30" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(1045, 851)

[node name="Tree33" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(1273, 740)

[node name="Tree38" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(1069, 119)

[node name="Tree39" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(1147, 134)

[node name="Tree44" parent="Trees" instance=ExtResource("3_uw7uo")]
position = Vector2(942, 104)

[node name="Tree46" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(732, 95)

[node name="Tree47" parent="Trees" instance=ExtResource("4_djxj5")]
position = Vector2(571, 92)
scale = Vector2(1.12063, 1.30672)

[node name="Tree48" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(815, 157)

[node name="Tree34" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(1284, 437)

[node name="StaticBody2D" parent="Trees" instance=ExtResource("5_ib3p7")]
position = Vector2(1256, 243)

[node name="Deco" type="Node" parent="."]

[node name="01" type="Sprite2D" parent="Deco"]
position = Vector2(78, 423)
texture = ExtResource("7_ldnkh")

[node name="03" type="Sprite2D" parent="Deco"]
position = Vector2(1076, 411)
texture = ExtResource("8_tv32f")

[node name="02" type="Sprite2D" parent="Deco"]
position = Vector2(1062, 418)
texture = ExtResource("9_qo61f")

[node name="04" type="Sprite2D" parent="Deco"]
position = Vector2(1075, 425)
texture = ExtResource("7_ldnkh")

[node name="06" type="Sprite2D" parent="Deco"]
position = Vector2(1100, 205)
texture = ExtResource("10_a5gvk")

[node name="15" type="Sprite2D" parent="Deco"]
position = Vector2(269, 459)
texture = ExtResource("11_l0nbg")

[node name="12" type="Sprite2D" parent="Deco"]
position = Vector2(78, 193)
texture = ExtResource("12_uuah0")

[node name="07" type="Sprite2D" parent="Deco"]
position = Vector2(333, 210)
texture = ExtResource("10_a5gvk")

[node name="05" type="Sprite2D" parent="Deco"]
position = Vector2(1086, 213)
texture = ExtResource("13_tlm7u")

[node name="08" type="Sprite2D" parent="Deco"]
position = Vector2(349, 225)
texture = ExtResource("14_hd2o2")

[node name="09" type="Sprite2D" parent="Deco"]
position = Vector2(358, 217)
texture = ExtResource("13_tlm7u")

[node name="Spawner" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("17_ys281")

[node name="Timer" type="Timer" parent="Spawner"]
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="TowerHealthBar" type="TextureProgressBar" parent="GUI" node_paths=PackedStringArray("tower")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -47.0
offset_right = -63.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(4, 4)
size_flags_horizontal = 4
value = 50.0
texture_under = ExtResource("18_x1usu")
texture_progress = ExtResource("19_m4jxn")
script = ExtResource("20_qsfc1")
tower = NodePath("../../Tower")

[node name="Control" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="GoldLabel" type="RichTextLabel" parent="GUI/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 84.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/normal_font = ExtResource("19_26lr3")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[img]res://assets/ui/coin.png[/img] 0"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
script = ExtResource("20_t47ew")

[node name="Upgrades" type="Control" parent="GUI/Control"]
layout_mode = 1
anchor_left = 0.746875
anchor_top = 0.695833
anchor_right = 0.978906
anchor_bottom = 0.973611
offset_left = -13.0
offset_top = -13.0
offset_right = -29.9996
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.2, 1.2)
script = ExtResource("21_3pp3v")
metadata/_edit_use_anchors_ = true

[node name="InfoContainer" type="Control" parent="GUI/Control/Upgrades"]
anchors_preset = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 273.0
offset_bottom = 129.0

[node name="InfoTitle" type="RichTextLabel" parent="GUI/Control/Upgrades/InfoContainer"]
z_index = 1
layout_mode = 0
offset_left = -0.49998
offset_top = -25.9998
offset_right = 354.5
offset_bottom = 38.0002
scale = Vector2(0.75, 0.75)
theme_override_fonts/normal_font = ExtResource("19_26lr3")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[img]res://assets/projectiles/arrow.png[/img]  [NEW] ARROW "
fit_content = true

[node name="InfoDesc" type="RichTextLabel" parent="GUI/Control/Upgrades/InfoContainer"]
z_index = 1
layout_mode = 0
offset_top = 45.0
offset_right = 353.0
offset_bottom = 104.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/normal_font = ExtResource("19_26lr3")
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
scroll_active = false

[node name="InfoCost" type="RichTextLabel" parent="GUI/Control/Upgrades/InfoContainer"]
z_index = 1
layout_mode = 0
offset_top = 91.5002
offset_right = 657.0
offset_bottom = 155.5
scale = Vector2(0.4, 0.4)
theme_override_fonts/normal_font = ExtResource("19_26lr3")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[img]res://assets/ui/coin.png[/img] COST: 100 GOLD"
fit_content = true
scroll_active = false

[node name="InfoFirst" type="RichTextLabel" parent="GUI/Control/Upgrades/InfoContainer"]
z_index = 1
layout_mode = 0
offset_left = 0.333344
offset_top = 24.0002
offset_right = 167.333
offset_bottom = 47.0002
scale = Vector2(0.75, 0.75)
theme_override_fonts/normal_font = ExtResource("19_26lr3")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "DAMAGE: 100"
fit_content = true

[node name="InfoSecond" type="RichTextLabel" parent="GUI/Control/Upgrades/InfoContainer"]
z_index = 1
layout_mode = 0
offset_left = 130.333
offset_top = 24.0002
offset_right = 300.333
offset_bottom = 47.0002
scale = Vector2(0.75, 0.75)
theme_override_fonts/normal_font = ExtResource("19_26lr3")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "DAMAGE: 100"
fit_content = true

[node name="InfoBackground" type="NinePatchRect" parent="GUI/Control/Upgrades/InfoContainer"]
modulate = Color(1, 1, 1, 0.513726)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -8.0
offset_top = -35.0
offset_right = -8.0
offset_bottom = 100.0
grow_horizontal = 2
scale = Vector2(1.055, 1.2)
texture = ExtResource("21_6orfn")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control/Upgrades"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -52.0
offset_right = -88.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.44, 1.44)

[node name="HBoxContainer1" type="HBoxContainer" parent="GUI/Control/Upgrades/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="GUI/Control/Upgrades/VBoxContainer/HBoxContainer1"]
layout_mode = 2
theme = ExtResource("22_4x3y6")

[node name="Button2" type="Button" parent="GUI/Control/Upgrades/VBoxContainer/HBoxContainer1"]
layout_mode = 2
theme = ExtResource("22_4x3y6")

[node name="Button3" type="Button" parent="GUI/Control/Upgrades/VBoxContainer/HBoxContainer1"]
layout_mode = 2
theme = ExtResource("22_4x3y6")

[node name="Button4" type="Button" parent="GUI/Control/Upgrades/VBoxContainer/HBoxContainer1"]
layout_mode = 2
theme = ExtResource("22_4x3y6")

[node name="Button5" type="Button" parent="GUI/Control/Upgrades/VBoxContainer/HBoxContainer1"]
layout_mode = 2
theme = ExtResource("22_4x3y6")

[node name="Tower" parent="." instance=ExtResource("20_7ojhf")]
position = Vector2(650, 343)
collision_layer = 2
collision_mask = 2

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
